syntax = "proto3";

option java_package = "com.dawidk.core.datastore";
option java_multiple_files = true;

message VideoItem {
  string videoUrl = 1;
  int64 videoProgress = 2;
  int64 videoDuration = 3;
}

//message MapFieldEntry {
//  string key = 1;
//  VideoItem value = 2;
//}

message VideoState {
  map<string, VideoItem> videoMap = 1;
  //repeated MapFieldEntry map_field = 1;
  //repeated string videoIds = 1;
}